--- a/app/src/main/res/layout/fragment_number_search.xml
+++ b/app/src/main/res/layout/fragment_number_search.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.fragments.number_search.ui.NumberSearchFragment">
+    tools:context=".ui.fragments.number_search.NumberSearchFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
