--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/numberSearchFragment"
-        android:name="com.dyshuk.android.factnumbers.ui.fragments.number_search.ui.NumberSearchFragment"
+        android:name="com.dyshuk.android.factnumbers.ui.fragments.number_search.NumberSearchFragment"
         android:label="fragment_number_search"
         tools:layout="@layout/fragment_number_search" />
 
